--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,3 +74,21 @@
     .text {
         color: red;
     }
+    .contact {
+        width: 100%;
+        height: 350px;
+        frameborder: 0;
+        scrolling: no;
+        marginheight: 0;
+        marginwidth: 0;
+    }
+    .facebook {
+        width: 500px;
+        height: 250px;
+        border: none;
+        overflow: hidden;
+        scrolling: no;
+        frameborder: 0;
+        allowTransparency: true;
+        allow: encrypted-media;
+    }
